--- a/NewsRoom/Infrastructure/Resource.en.resx
+++ b/NewsRoom/Infrastructure/Resource.en.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="emRequired" xml:space="preserve">
-    <value>The {0} field is required</value>
+    <value>The {0} field is required!</value>
   </data>
 </root>
