added in localizer folders more things to can change speech

--- a/NewsRoom/Resources/Views/Home/Index.resx
+++ b/NewsRoom/Resources/Views/Home/Index.resx
@@ -121,6 +121,6 @@
     <value>Часът в момента е</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Начало</value>
+    <value>Добре дошли</value>
   </data>
 </root>
