--- a/NewsRoom/Resources/Views/Home/Index.en.resx
+++ b/NewsRoom/Resources/Views/Home/Index.en.resx
@@ -121,6 +121,6 @@
     <value>Current time is</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Home Page</value>
+    <value>Welcome</value>
   </data>
 </root>
