--- a/NewsRoom/Resources/Views/Home/Index.en.resx
+++ b/NewsRoom/Resources/Views/Home/Index.en.resx
@@ -123,4 +123,7 @@
   <data name="PageTitle" xml:space="preserve">
     <value>Welcome</value>
   </data>
+  <data name="StatisticsButton" xml:space="preserve">
+    <value>Show Statistics</value>
+  </data>
 </root>
