--- a/NewsRoom/Resources/Views/Home/Index.resx
+++ b/NewsRoom/Resources/Views/Home/Index.resx
@@ -123,4 +123,7 @@
   <data name="PageTitle" xml:space="preserve">
     <value>Добре дошли</value>
   </data>
+  <data name="StatisticsButton" xml:space="preserve">
+    <value>Покажи статистика</value>
+  </data>
 </root>
