added some new upcomming messages in a Home

--- a/NewsRoom/Resources/Views/Home/Index.resx
+++ b/NewsRoom/Resources/Views/Home/Index.resx
@@ -121,7 +121,7 @@
     <value>Часът в момента е</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Добре дошли</value>
+    <value>Добре дошли в News Room</value>
   </data>
   <data name="StatisticsButton" xml:space="preserve">
     <value>Покажи статистика</value>
