--- a/NewsRoom/Resources/Views/Home/index.de.resx
+++ b/NewsRoom/Resources/Views/Home/index.de.resx
@@ -121,7 +121,7 @@
     <value>Die Zeit ist jetzt genau</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Willkommen</value>
+    <value>Willkommen in News Room</value>
   </data>
   <data name="StatisticsButton" xml:space="preserve">
     <value>Zeige Statistiken</value>
