--- a/NewsRoom/Resources/Views/Home/Index.en.resx
+++ b/NewsRoom/Resources/Views/Home/Index.en.resx
@@ -121,7 +121,7 @@
     <value>Current time is</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Welcome</value>
+    <value>Welcome in News Room</value>
   </data>
   <data name="StatisticsButton" xml:space="preserve">
     <value>Show Statistics</value>
